[package]
name = "calculadora_gestacional"
version = "0.1.0"
edition = "2021"
authors = ["Paulo A V Munhoz <pauloavmunhoz@gmail.com>"]
license = "MIT"

[dependencies]
chrono = "0.4"
eframe = "0.27" # A biblioteca para a interface gráfica (GUI)
arboard = "3.4" # Para funcionalidade de copiar para a área de transferência

[build-dependencies]
embed-resource = "2.4"